122450050_Tugas VDI 2.md

--- a/122450050_Tugas VDI 2.md
+++ b/122450050_Tugas VDI 2.md
@@ -1,1 +1,86 @@
+### **Patricia Leondrea Diajeng Putri**
+### **122450050 / RB**
 
+## **Visualisasi Data Buruk**
+### **Gambar 1**
+<img src="https://github.com/patriciadiajeng/122450050_Tugas-VDI-2.md/blob/91dec9d9e81eaac65c1b5b9a10bb971b7be11ba3/VD%20Buruk%202.png?raw=true" alt="Gambar Visualisasi Data Buruk" width="500">
+
+##### **_Sumber : https://www.polymersearch.com/blog/10-good-and-bad-examples-of-data-visualization_**
+
+Secara keseluruhan, gambar di atas memiliki visualisasi yang kurang baik dalam beberapa hal karena tidak memenuhi prinsip dalam pengembangan visualisasi data. Penjelasan lebih rincinya adalah sebagai berikut :
+
+#### **1.	Strive for from and fuction**
+Visualisasi data di atas tidak memaksimalkan bentuk dan fungsi secara optimal, hal tersebut terlihat dari penggunaan sumbu horizontalnya dengan teks yang miring sehingga sulit untuk membaca dan memahami kategori setiap bar nya. Bar chart yang ditampilkan pun tidak beraturan dalam skala atau pemisahan antar-kategori sehingga kurang efektif dalam penyampaian informasi.
+
+#### **2. Justifying the selection of everything we do**
+Pemilihan jenis visualisasi harus dibenarkan karena bar chart vertikal yang dipilih tidak ada pengelompokkan atau pengaturan yang jelas. Selain itu, urutan kategori tidak mengikuti urutan yang logis seperti tidak sesuai abjad atau tidak sesuai pengelompokkan tema, sehingga membuat data sulit untuk dipahami dengan cepat.
+
+#### **3. Creating accessibility through intuitive design**
+Desain pada visualisasi data ini tidak intuitif karena sulit dibaca dan tidak ada panduan warna atau elemen visual lain yang mempermudah pemahaman pembaca. Posisi teks yang miring dan kategori yang panjang membuat pembaca harus memiringkan kepala untuk membaca, sehingga menurunkan aksebilitas visual.
+
+#### **4. Never deceive the receiver**
+Penyajian sumbu yang tidak jelas atau tidak diberi label yang cukup rinci (ada beberapa bar chart yang tidak beri label) dapat menyebabkan pemahaman yang salah, sehingga bisa menyesatkan pembaca mengenai perbedaan antar kategori.
+
+<br>
+
+### **Gambar 2**
+<img src="https://github.com/patriciadiajeng/122450050_Tugas-VDI-2.md/blob/91dec9d9e81eaac65c1b5b9a10bb971b7be11ba3/Picture1.png?raw=true" alt="Gambar Visualisasi Data Buruk" width="500">
+
+##### **_Sumber : https://venngage.com/blog/bad-infographics/#lesson7_**
+
+Secara keseluruhan, gambar di atas memiliki visualisasi yang kurang baik dalam beberapa hal karena tidak memenuhi prinsip dalam pengembangan visualisasi data. Penjelasan lebih rincinya adalah sebagai berikut :
+
+#### **1.	Strive for from and fuction**
+Visualisasi data di atas tidak memaksimalkan bentuk dan fungsi secara optimal, walaupun berbentuk spiral yang tampak menarik secara visual, namun fungsi sulit untuk dipahami. Hal tersebut terlihat dari garis spiral berwarna yang saling bertumpuk sehingga sulit untuk melihat data spesifik setiap negara. 
+
+#### **2. Justifying the selection of everything we do**
+Pemilihan jenis visualisasi harus dibenarkan karena pemilihan garis spiral berlapis tidak dijelaskan dengan baik. Bentuk visualisasi spiral memperumit informasi dengan warna yang terlalu banyak dan data yang tumpang tindih.
+
+#### **3. Creating accessibility through intuitive design**
+Desain pada visualisasi data ini tidak intuitif karena akan sulit dipahami oleh pembaca untuk memahami pola yang digambarkan karena spiral terlalu rumit. Setiap negara memang diwakili oleh warna yang berbeda, namun karena spiralnya saling bertumpuk, sulit untuk membaca pola masing-masing negara dengan jelas.
+
+#### **4. Never deceive the receiver**
+Penyajian visualisasi dapat menyebabkan kebingungan. Bentuk spiral dapat menciptakan ilusi perbandingan yang tidak akurat antara negara-negara yang berbeda, terutama jika pembaca tidak dapat dengan mudah mengikuti satu garis dari awal hingga akhir. Selain itu, skala yang tidak konvensional pada sumbu X dan Y mungkin membuat penafsiran pola kenaikan atau penurunan jumlah
+jumlah kematian menjadi salah.
+
+<br>
+
+## **Visualisasi Data Baik**
+<img src="https://github.com/patriciadiajeng/122450050_Tugas-VDI-2.md/blob/91dec9d9e81eaac65c1b5b9a10bb971b7be11ba3/Picture2.png?raw=true" alt="Gambar Visualisasi Data Buruk" width="500">
+
+##### **_Sumber : https://www.instagram.com/p/DACw8jmzZ7N/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==_**
+
+Secara keseluruhan, gambar di atas memiliki visualisasi yang cukup baik dalam beberapa hal karena memenuhi prinsip dalam pengembangan visualisasi data. Penjelasan lebih rincinya adalah sebagai berikut :
+
+#### **1.	Strive for from and fuction**
+Visualisasi data di atas memaksimalkan bentuk dan fungsi secara optimal, bentuk desain yang sederhana dan jelas yang mendukung fungsi penyampaian informasi. Tabel medali ditampilkan dengan warna yang berbeda untuk setiap jenis medali (emas, perak, dan perunggu) serta diikuti dengan jumlah total. Bentuk tabel ini sangat mendukung fungsinya sebagai alat untuk membandingkan perolehan medali antarprovinsi dalam PON 2024.
+
+#### **2. Justifying the selection of everything we do**
+Pemilihan jenis visualisasi mendukung informasi yang ingin disampaikan. Penggunaan warna emas, perak, dan perunggi sesuai dengan warna umum medali, sehingga mudah dimengerti pembaca. Total perolehan medali juga ditampilkan di kolom akhir, sehingga memudahkan pembaca untuk mendapatkan informasi ringkasan tanpa harus menghitung secara manual. 
+
+#### **3. Creating accessibility through intuitive design**
+Desain pada visualisasi data ini intuitif karena pembaca akan cepat memahami posisi tiap provinsi dalam perolehan medali tanpa kesulitan. Ikon provinsi ditampilkan di samping nama, sehingga memudahkan identifikasi, terutama bagi pembaca yang terbiasa mengetahui daerah dengan logo daerah. Urutan klasemen pun diatur dari yang tertinggi hingga terendah sehingga membuat pembacaan informasi menjadi lebih cepat dan mudah. 
+
+#### **4. Never deceive the receiver**
+Penyajian visualisasi ini ditampilkan dengan jelas tanpa manipulasi grafik atau visual yang bisa mengubah presepsi pembaca. Setiap jumlah medali dan totalnya tercantum secara akurat dan tidak ada elemen yang berpotensi menipu pembaca dalam interpretasi data.
+
+<br>
+
+### **Gambar 2**
+<img src="https://github.com/patriciadiajeng/122450050_Tugas-VDI-2.md/blob/8c8f89f9811c35cf07a4e45f9b723cccf8cd478b/VD%20Baik%202.jpg?raw=true" alt="Gambar Visualisasi Data Baik" width="500">
+
+##### **_Sumber : https://www.instagram.com/p/C9mhmjZxyrk/?igsh=MW5zdzZveWk4NmczMg==_**
+
+Secara keseluruhan, gambar di atas memiliki visualisasi yang cukup baik dalam beberapa hal karena memenuhi prinsip dalam pengembangan visualisasi data. Penjelasan lebih rincinya adalah sebagai berikut :
+
+#### **1.	Strive for from and fuction**
+Visualisasi data di atas memaksimalkan bentuk dan fungsi secara optimal, bentuk grafik batang yang dipilih sangat efektif untuk menunjukkan perbandingan antara dua nilai yang berbeda yaitu Estimasi Rata-rata Pendapatan Ojol dan Rata-rata UMK. Warna yang berbeda (biru muda untuk Estimasi Rata-rata Pendapatan Ojol dan biru tua untuk Rata-rata UMK) membantu memisahkan dua kategori data dengan jelas. 
+
+#### **2. Justifying the selection of everything we do**
+Pemilihan jenis visualisasi mendukung informasi yang ingin disampaikan. Pemilihan warna yang berbeda untuk dua jenis data sehingga mudah untuk dibedakan, serta angka-angka di atas setiap batang memberikan informasi lebih tepat untuk pembaca sehingga tidak perlu memperkirakan nilai dari tinggi grafik batang. Skala angka pada grafik batang juga tepat menyesuaikan dengan data dalam satuan jutaan rupiah. 
+
+#### **3. Creating accessibility through intuitive design**
+Desain pada visualisasi data ini intuitif karena penggunaan grafik batang yang sederhana membuat perbandingan langsung terlihat jelas. Judul grafik yang jekas dan label setiap kota serta angka Estimasi Rata-rata Pendapatan Ojol dan Rata-rata UMK yang tertera memudahkan pembaca untuk langsung mengerti isi informasi. 
+
+#### **4. Never deceive the receiver**
+Penyajian visualisasi ini ditampilkan dengan jelas. Tinggi grafik batang yang proposional menggambarkan perbedaan pendapatan dengan benar tanpa ada manipulasi visual. Nilai Estimasi Rata-Rata Pendapatan Ojol dan rata-rata UMK disajikan tertulis di setiap grafik batang sehingga informasi tidak hanya dalam visual namun didukung oleh data numerik. Penempatan sumber data di bagian bawah juga menambah kepercayaan pada keakuratan data yang disajikan.
